--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/fabiolahorasstevenson/casino-poo#readme",
   "dependencies": {
-    "@types/node": "^18.11.9",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9"
   }
 }
